--- a/fundraisers.html
+++ b/fundraisers.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="assets/custom.css" />
 </head>
 <body class="bg-white text-gray-900" data-page="fundraisers">
-  <!-- NAVBAR -->
   <header class="sticky top-0 z-40 header-grad text-white shadow-lg">
     <div class="container mx-auto px-4 py-4 flex items-center justify-between">
       <a href="index.html#home" class="text-2xl font-extrabold tracking-tight">🌱 <span data-i18n="brand">Tierra Libre</span></a>
@@ -31,24 +30,21 @@
     </div>
   </header>
 
-  <!-- LISTA CAMPAGNE -->
   <section class="bg-white">
     <div class="container mx-auto px-6 py-12">
       <h1 class="text-3xl md:text-4xl font-extrabold" data-i18n="pillarsTitle">Nuestros 11 Pilares</h1>
       <p class="mt-2 text-lg text-gray-700" data-i18n="pillarsLead">Cada pilar tiene una página con explicaciones detalladas, imágenes y acciones concretas.</p>
-
       <div id="fundList" class="mt-8 grid gap-6 sm:grid-cols-2 lg:grid-cols-3"></div>
     </div>
   </section>
 
-  <!-- FOOTER -->
   <footer class="bg-white">
     <div class="container mx-auto px-6 py-10 border-t text-gray-700 flex flex-col md:flex-row md:items-center md:justify-between gap-4">
       <p class="text-sm">© <span id="year"></span> Tierra Libre Social Club • <span data-i18n="footerLoc">Villalonga (Valencia)</span></p>
       <div class="flex gap-5 text-sm">
         <a class="underline" href="mailto:info@cooperativatierralibre.com">info@cooperativatierralibre.com</a>
-        <a class="underline" href="index.html#contact" data-i18n="menu.contact">Contattaci</a>
-        <a class="underline" href="index.html#join" data-i18n="menu.join">Partecipa</a>
+        <a class="underline" href="index.html#contact" data-i18n="menu.contact">Contáctanos</a>
+        <a class="underline" href="index.html#join" data-i18n="menu.join">Participa</a>
       </div>
     </div>
   </footer>
